golang-http/deployment/tenant.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels: 
    kubernetes.io/metadata.name: tenant
  name: tenant

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: tenant
  namespace: tenant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tenant
  template:
    metadata:
      labels:
        app: tenant
    spec:
      containers:
        - name: tenant
          image: alpine/curl
          imagePullPolicy: IfNotPresent
          command: 
            - sleep
            - "3600"
          resources:
            requests:
              memory: "128Mi"
              cpu: "200m"
            limits:
              memory: "128Mi"
              cpu: "200m"
          ports:
            - containerPort: 8888
---


apiVersion: v1 
kind: Service 
metadata: 
  labels: 
    app: tenant
  name: tenant
  namespace: tenant
spec: 
  ports: 
  - name: 8888-8888
    port: 8888
    protocol: TCP 
    targetPort: 8888
  selector: 
    app: tenant
  type: ClusterIP
